--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="logo/favicon.ico" type="image/x-icon">
+   <link rel="icon" type="image/x-icon" sizes="32x32" href="logo/fav.png">
 
   <!--
     - custom css link
