--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-   <link rel="icon" type="image/x-icon" sizes="32x32" href="logo/fav.png">
+  <link rel="icon" type="image/x-icon" sizes="32x32" href="logo/fav.png">
 
   <!--
     - custom css link
@@ -1316,7 +1316,7 @@
                 <button class="sidebar-accordion-menu" data-accordion-btn>
 
                   <div class="menu-title-flex">
-                    <img src="" alt="logo/glasses.svg" class="menu-title-img" width="20"
+                    <img src="logo/glasses.svg" alt="glasses" class="menu-title-img" width="20"
                       height="20">
 
                     <p class="menu-title">Glasses</p>
