--- a/index.html
+++ b/index.html
@@ -3032,18 +3032,16 @@
 
             <div class="testimonial-card">
 
-              <img src="banner/testimonial-1.jpg" alt="alan doe" class="testimonial-banner" width="80" height="80">
+              <img src="banner/testimonial-1.jpeg" alt="alan doe" class="testimonial-banner" width="80" height="80">
 
-              <p class="testimonial-name">Alan Doe</p>
+              <p class="testimonial-name">Kalpesh Salave</p>
 
               <p class="testimonial-title">CEO & Founder Invision</p>
 
               <img src="logo/quotes.svg" alt="quotation" class="quotation-img" width="26">
 
               <p class="testimonial-desc">
-                Lorem ipsum dolor sit amet consectetur Lorem ipsum
-                dolor dolor sit amet.
-              </p>
+                As the CEO of Kalp-Kart, your visionary leadership and relentless dedication have propelled the company to new heights.
 
             </div>
 
