--- a/index.html
+++ b/index.html
@@ -3032,7 +3032,7 @@
 
             <div class="testimonial-card">
 
-              <img src="banner/testimonial-1.jpeg" alt="alan doe" class="testimonial-banner" width="80" height="80">
+              <img src="banner/testimonial.jpeg" alt="alan doe" class="testimonial-banner" width="80" height="110">
 
               <p class="testimonial-name">Kalpesh Salave</p>
 
