--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
 
           <div class="slider-item">
 
-            <img src="banner-2.jpg" alt="modern sunglasses" class="banner-img">
+            <img src="banner/banner-2.jpg" alt="modern sunglasses" class="banner-img" id="hi">
 
             <div class="banner-content">
 
